--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cat_function)
 export(cat_function2)
 export(external_function1)
 export(initialize)
+export(saveToken)
 export(test_function1)
 export(test_function2)
 export(test_function3)
