prepTokens, maxN, maxNchar, dateCode, timeCode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,14 @@
 export(addStudy)
 export(cat_function)
 export(cat_function2)
+export(dateCode)
 export(external_function1)
 export(initialize)
+export(maxN)
+export(maxNchar)
+export(prepTokens)
 export(saveToken)
 export(test_function1)
 export(test_function2)
 export(test_function3)
+export(timeCode)
