fixed prepTokens, added get_friends_rotate_maxToken_BIG

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cat_function)
 export(cat_function2)
 export(dateCode)
 export(external_function1)
+export(get_friends_rotate_maxToken_BIG)
 export(initialize)
 export(maxN)
 export(maxNchar)
