basic scraping functions except favorites and timelines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,15 @@ export(cat_function)
 export(cat_function2)
 export(dateCode)
 export(external_function1)
+export(getFollowersBig)
 export(getFriendsBig)
 export(initialize)
 export(maxN)
 export(maxNchar)
 export(prepTokens)
 export(saveToken)
+export(scrapeFollowers)
+export(scrapeFriends)
 export(test_function1)
 export(test_function2)
 export(test_function3)
