remaining scraping functions except favorites

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(cat_function)
 export(cat_function2)
 export(dateCode)
 export(external_function1)
+export(firstScrape)
 export(getFollowersBig)
 export(getFriendsBig)
+export(getTimelinesHistorical)
 export(initialize)
 export(maxN)
 export(maxNchar)
@@ -14,7 +16,11 @@ export(prepTokens)
 export(saveToken)
 export(scrapeFollowers)
 export(scrapeFriends)
+export(scrapeGroup)
+export(scrapeStudy)
+export(scrapeTimelines)
 export(test_function1)
 export(test_function2)
 export(test_function3)
 export(timeCode)
+export(updateTimelines)
