--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,8 @@ RoxygenNote: 7.1.1
 Depends: 
     tidyverse,
     rtweet
+Imports: 
+    lubridate,
+    shiny,
+    shinycssloaders,
+    shinydashboard
