--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,22 @@
 export(addPanel)
 export(addStudy)
 export(dateCode)
+export(dotPlot)
 export(editPanel)
 export(firstScrape)
+export(fixSentiment)
 export(getFollowersBig)
 export(getFriendsBig)
 export(getTimelinesHistorical)
 export(initialize)
+export(linePlot)
+export(make_timeseries)
 export(maxN)
 export(maxNchar)
+export(myIndexer)
 export(prepTokens)
+export(prep_timeline_data)
+export(read_and_session)
 export(saveToken)
 export(scrapeFollowers)
 export(scrapeFriends)
