--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(make_timeseries)
 export(maxN)
 export(maxNchar)
 export(myIndexer)
+export(plotGradient)
 export(prepTokens)
 export(prep_timeline_data)
 export(read_and_session)
