--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plotGradient)
 export(prepTokens)
 export(prep_timeline_data)
 export(read_and_session)
+export(runTimelineDash)
 export(saveToken)
 export(scrapeFollowers)
 export(scrapeFriends)
