--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(prepTokens)
 export(prep_timeline_data)
 export(read_and_session)
 export(runTimelineDash)
+export(runTimelineDashD3)
 export(saveToken)
 export(scrapeFollowers)
 export(scrapeFriends)
