--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,10 @@ export(maxN)
 export(maxNchar)
 export(myIndexer)
 export(myRescale)
+export(nodeIndexer)
 export(plotGradient)
 export(prepTokens)
+export(prep_network_data_d3)
 export(prep_timeline_data)
 export(read_and_session)
 export(runTimelineDash)
