--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,5 +31,6 @@ export(scrapeFriends)
 export(scrapePanel)
 export(scrapeStudy)
 export(scrapeTimelines)
+export(singleNodeIndexer)
 export(timeCode)
 export(updateTimelines)
