run network dash function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(prepTokens)
 export(prep_network_data_d3)
 export(prep_timeline_data)
 export(read_and_session)
+export(runNetworkDash)
 export(runTimelineDash)
 export(runTimelineDashD3)
 export(saveToken)
