sampler function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(read_and_session)
 export(runNetworkDash)
 export(runTimelineDash)
 export(runTimelineDashD3)
+export(sampleEnglishTweeters5k)
 export(saveToken)
 export(scrapeFollowers)
 export(scrapeFriends)
