sampler and friend getter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(firstScrape)
 export(fixSentiment)
 export(getFollowersBig)
 export(getFriendsBig)
+export(getSampledUsersFriends)
 export(getTimelinesHistorical)
 export(initialize)
 export(linePlot)
