--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,7 @@ export(read_and_session)
 export(runNetworkDash)
 export(runTimelineDash)
 export(runTimelineDashD3)
-export(sampleEnglishTweeters5k)
+export(sampleEnglishTweeters5k50kRatioHalf)
 export(saveToken)
 export(scrapeFollowers)
 export(scrapeFriends)
