qualtrics functions and scripts added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,11 @@ export(getFriendsBig)
 export(getTimelinesHistorical)
 export(initialize)
 export(linePlot)
+export(link_ids)
 export(make_timeseries)
+export(match_by_following_3)
+export(match_by_following_3_BYHAND)
+export(match_by_following_3_INVESTIGATE)
 export(maxN)
 export(maxNchar)
 export(myIndexer)
@@ -31,8 +35,11 @@ export(saveToken)
 export(scrapeFollowers)
 export(scrapeFriends)
 export(scrapePanel)
+export(scrapeQualtrics)
 export(scrapeStudy)
 export(scrapeTimelines)
 export(singleNodeIndexer)
+export(sn_to_userid)
 export(timeCode)
 export(updateTimelines)
+export(which_maxes)
