loadTimelines, a simple timeline loading function, added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getTimelinesHistorical)
 export(initialize)
 export(linePlot)
 export(link_ids)
+export(loadTimelines)
 export(makeSentiment)
 export(make_timeseries)
 export(match_by_following_3)
