--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(addSentiment)
 export(addStudy)
 export(batchedSentiment)
 export(cSeq)
+export(chist)
 export(dateCode)
 export(dotPlot)
 export(editPanel)
