--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(prepTokens)
 export(prep_network_data_d3)
 export(prep_timeline_data)
 export(read_and_session)
+export(runDash)
 export(runNetworkDash)
 export(runTimelineDash)
 export(runTimelineDashD3)
