--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(linePlot)
 export(link_ids)
 export(loadTimelines)
 export(makeSentiment)
+export(make_survey_timeseries)
 export(make_timeseries)
 export(match_by_following_3)
 export(match_by_following_3_BYHAND)
@@ -31,6 +32,7 @@ export(nodeIndexer)
 export(plotGradient)
 export(prepTokens)
 export(prep_network_data_d3)
+export(prep_survey_data)
 export(prep_timeline_data)
 export(read_and_session)
 export(runDash)
@@ -47,5 +49,6 @@ export(scrapeTimelines)
 export(singleNodeIndexer)
 export(sn_to_userid)
 export(timeCode)
+export(ts_to_cumulative)
 export(updateTimelines)
 export(which_maxes)
