prep timeline data for spirals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(nodeIndexer)
 export(plotGradient)
 export(prepTokens)
 export(prep_network_data_d3)
+export(prep_network_data_d3_spirals)
 export(prep_survey_data)
 export(prep_timeline_data)
 export(read_and_session)
