--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(loadTimelines)
 export(makeSentiment)
 export(make_survey_timeseries)
 export(make_timeseries)
+export(match_async_by_time)
 export(match_by_following_3)
 export(match_by_following_3_BYHAND)
 export(match_by_following_3_INVESTIGATE)
