--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(prep_network_data_d3)
 export(prep_network_data_d3_spirals)
 export(prep_survey_data)
 export(prep_timeline_data)
+export(readRelevantAssignmentFollowers)
 export(read_and_session)
 export(runDash)
 export(runNetworkDash)
