token logging implemented

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(initialize)
 export(linePlot)
 export(link_ids)
 export(loadTimelines)
+export(logToken)
 export(makeSentiment)
 export(make_survey_timeseries)
 export(make_timeseries)
