--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,8 +24,8 @@ export(make_survey_timeseries)
 export(make_timeseries)
 export(match_async_by_time)
 export(match_by_following_3)
-export(match_by_following_3_BYHAND)
-export(match_by_following_3_INVESTIGATE)
+export(match_byhand)
+export(match_investigate)
 export(maxN)
 export(maxNchar)
 export(myIndexer)
